<resources>
    <string name="app_name">Object Detect</string>
    <string name="app_title">Object \n Detector &#127991;
    </string>
    <string name="app_explain">
        This application uses a machine learning kit from google
        to detect objects in images.
    </string>
    <string name="go_to_labeler">Go to \n Labeler</string>
    <string name="close_button_string">Close App</string>
    <string name="fragment_labeler_title">Object Labeler</string>
    <string name="fragment_labeler">
        Take a picture using your
        camera or load one from the gallery and it will be labeled.
    </string>
    <string name="labeler_camera_button_string">Take a picture &#128248;</string>
    <string name="labeler_gallery_button_string">Load from gallery </string>
    <string name="image_preview_title">Image Preview</string>
    <string name="launch_labeler">Launch Labeler</string>
    <string name="choose_another">Choose another image</string>
    <string name="confidence_text">Choose confidence</string>
    <string name="labels_title">Labels (scroll)</string>
    <string name="save_to_db">Save to DB</string>
    <string name="snackbar_insert">Inserted successfully</string>
    <string name="action_text">Go to DB</string>
    <string name="database_text">Database</string>
    <string name="legend_image_string">Image</string>
    <string name="legend_labels_string">Labels</string>
    <string name="legend_conf_string">Conf</string>
    <string name="searchstring">Search</string>
    <string name="label_hint">label/confidence</string>
    <string name="delete_item_string">Delete item?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="image_dimen_string">Image too big! Select a smaller image</string>
    <string name="item_deleted_string">Item deleted</string>
    <string name="no_labels_found">No labels found</string>
    <string name="db_explain">Touch an item to zoom, hold to delete</string>
    <string name="confidence_explain">Set a maximum threshold to the labeler precision</string>
</resources>