<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ItemFragment">

    <TableLayout
        android:id="@+id/database_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/database_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:text="@string/database_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#F44336"
                android:textSize="48sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/explainDBTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/db_explain" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10">

            <TextView
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:text="@string/searchstring"
                android:textAlignment="center"
                android:textColor="#F50505"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/searchQuery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/label_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text|textAutoCorrect" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/image_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/legend_image_string" />

            <TextView
                android:id="@+id/labels_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:text="@string/legend_labels_string" />

            <TextView
                android:id="@+id/conf_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/legend_conf_string" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:name="com.example.objectdetect.ItemFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="4"
                app:layoutManager="LinearLayoutManager"
                tools:context=".fragments.ItemFragment"
                tools:listitem="@layout/fragment_item" />
        </TableRow>

    </TableLayout>

</FrameLayout>