<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabelerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragmentLabelerTextView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/fragment_labeler"
            android:textAlignment="center" />

        <Button
            android:id="@+id/labeler_camera_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_style"
            android:text="@string/labeler_camera_button_string"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/labeler_gallery_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons_style"
            android:text="@string/labeler_gallery_button_string"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>